[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rt-lacam"
version = "0.1.1"
description = "Real-Time LaCAM: incremental MAPF solver with completeness guarantees"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ekusiadadus" }]
keywords = ["mapf", "multi-agent", "path-finding", "lacam", "real-time"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["cffi>=1.15"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.urls]
Repository = "https://github.com/ekusiadadus/rt-lacam"

# NOTE: This package contains a platform-specific native library.
# The wheel is source-build only: users must have Zig >= 0.15.0 installed.
# Do NOT upload py3-none-any wheels to PyPI — build platform-specific wheels
# per target (macos-arm64, linux-x86_64, etc.) via CI.

[tool.hatch.build.targets.wheel]
packages = ["python/rt_lacam"]

[tool.hatch.build.targets.sdist]
include = [
    "python/",
    "src/",
    "build.zig",
    "build.zig.zon",
    "build_hook.py",
    "build_wheel.py",
    "tests/",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    ".gitignore",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
